--- a/style.css
+++ b/style.css
@@ -39,10 +39,26 @@
     padding: 40px;
     padding-left: 60px;
     box-shadow: -10px 5px 10px 10px rgba(0, 0, 0, 0.1);
+    font-size: 17px;
+    font-weight: 500;
 
 }
 
 .details h1 {
     font-size: 30px;
     color: #333;
+    margin-bottom: 20px;
+}
+
+.details h2 {
+    font-size: 30px;
+    color: #555;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.details h3 {
+    color : #00d874;
+    margin-bottom: 20px;
+    
 }
