--- a/style.css
+++ b/style.css
@@ -62,3 +62,14 @@
     margin-bottom: 20px;
     
 }
+
+.details form {
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.size-select {
+    display: flex;
+    align-items: center;
+    margin-top: 50px;
+}
