--- a/style.css
+++ b/style.css
@@ -73,3 +73,23 @@
     align-items: center;
     margin-top: 50px;
 }
+
+.size-select p {
+    width: 70px;
+}
+
+.size-select input:checked + span {
+    color: blue;
+    font-weight: 600;
+}
+
+.size-select input {
+    display: none;
+}
+
+.size-select span {
+    padding: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+    
+}
