--- a/style.css
+++ b/style.css
@@ -93,3 +93,13 @@
     cursor: pointer;
     
 }
+
+.color-select {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.color-select p {
+    width: 75px;
+}
