--- a/style.css
+++ b/style.css
@@ -103,3 +103,51 @@
 .color-select p {
     width: 75px;
 }
+
+.color-select span {
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    margin-right: 15px;
+    cursor: pointer;
+}
+
+.color-1 {
+    background: red;
+}
+.color-2 {
+    background: blue;
+}
+.color-3 {
+    background: green;
+}
+.color-4 {
+    background: pink;
+}
+.color-select input:checked + span {
+    transform: scale(0.7);
+    box-shadow: 0 0 0 4px #fff, 0 0 0 6px #000;
+}
+
+.color-select input {
+    display: none;
+}
+
+.quantity-select {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.quantity-select p {
+    width: 70px;
+}
+
+.quantity-select input {
+    width: 50px;
+    height: 30px;
+    border: 1px solid #ccc;
+    text-align: center;
+    outline: 0;
+}
