--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
     background: #241e20;
     transform: scale(1.08);
     box-shadow: -10px 5px 10px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
 }
 
 .gallery img {
@@ -150,4 +151,39 @@
     border: 1px solid #ccc;
     text-align: center;
     outline: 0;
+    border-radius: 12px;
+}
+
+form button {
+    background: #553ff0;
+    color: #fff;
+    width: 100%;
+    padding: 10px;
+    border: 0;
+    outline: 0;
+    font-size: 17px;
+    margin-top: 50px;
+    border-radius: 30px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.controls {
+    position: absolute;
+    bottom: 40px;
+    right: 20px;
+}
+
+.btn {
+    display: block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 10px;
+    background: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+}
+
+.btn.active {
+    background: #553ff0;
 }
