--- a/style.css
+++ b/style.css
@@ -82,6 +82,8 @@
 .size-select input:checked + span {
     color: blue;
     font-weight: 600;
+    border-bottom: #000 1px solid;
+    transform: scale(0.7);
 }
 
 .size-select input {
@@ -182,8 +184,12 @@ form button {
     margin: 10px;
     background: rgba(255, 255, 255, 0.5);
     cursor: pointer;
+    
 }
 
 .btn.active {
-    background: #553ff0;
+    background: #4040f0;
+    transform: scale(1.3);
+    border: white 1px solid;
+    
 }
